code25_all/scala/16782191.txt
var set = Set[(Int, Int)]()

set += (1, 2)

<console>:9: error: type mismatch;
 found   : Int(1)
 required: (Int, Int)
              set += (1, 2)
                    ^

set += ((1, 2))

